MES-6881 fix truncated end test modal (#210)
* fix truncated end test modal

* fix truncated end test modal

--- a/src/theme/sass-partials/_modal.scss
+++ b/src/theme/sass-partials/_modal.scss
@@ -11,6 +11,7 @@
 
 .mes-modal-alert {
   .modal-wrapper {
+    --height: 100%;
     top: initial;
     left: initial;
     --background: none;
